feat: adds pagination [x] fixes #3
