# app/rest/docs/swagger.json
@@ -34,9 +34,9 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "last",
-                        "name": "last",
+                        "type": "string",
+                        "description": "page token",
+                        "name": "page_token",
                         "in": "query"
                     }
                 ],
@@ -211,8 +211,8 @@
                         "$ref": "#/definitions/rest.Guest"
                     }
                 },
-                "last": {
-                    "type": "integer"
+                "next_page_token": {
+                    "type": "string"
                 }
             }
         }
